# ICP

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  issues.md  stdlib.lua  vcpkg-configuration.json  vcpkg.json
examples/: BuildPipeline.txt  BuildPipeline_input.txt  CoffeeMachine.txt  Delivery.txt  Hello.txt  Hello_input.txt.txt  Route.txt  Toggle.txt  Toggle_input.txt  TrafficLight.txt  WashingMachine.txt  route.txt
fsm/: AutomatLib.cpp  AutomatLib.h  AutomatRuntime.cpp  AutomatRuntime.h  CMakeLists.txt  Interpret.cpp  Interpret.h  ParserLib.cpp  ParserLib.h  README.md  StateMachine.cpp  StateMachine.h  Stopwatch.h  Timing-linux.cpp  Timing-windows.cpp  Timing.cpp  Timing.h  Utils.cpp  Utils.h  fsmConstructed  fsmConstructed.template.cpp  fsmDefinition.txt  main.cpp  parser.cpp  parser.h  timer.cpp  timer.h  tof5s.template.cpp
fsm/messages/: client.cpp  client.h  info.txt  p2p.cpp  p2p.h  server.cpp  server.h
fsm/types/: all_types.h  numeric.h  states.cpp  states.h  transitions.cpp  transitions.h  variables.cpp  variables.h
libs/: ctre.7z
src/icp-qt/: AutomatModel.cpp  AutomatModel.h  CMakeLists.txt  Draggable.cpp  Draggable.h  EditorMode.h  GraphicsScene.cpp  GraphicsScene.h  StateItem.cpp  StateItem.h  TransitionItem.cpp  TransitionItem.h  draggablewidget.cpp  draggablewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
